created category assign module

--- a/.htaccess
+++ b/.htaccess
@@ -1,6 +1,6 @@
 RewriteEngine On
 
-RewriteBase /
+RewriteBase /Mine/online_shop
 
 RewriteCond %{REQUEST_URI} ^system.*
 RewriteCond $1 !^(index\.php|images|robots\.txt)
